Name:               QuantHas
Version:            0.0
Description:
    QuantHas project is an attempt to port QuantLib to Haskell keeping the functional flavor of Haskell.
License:            BSD3
License-file:       LICENSE
Author:             Simon Courtenage
Maintainer:         courtenage@gmail.com
Homepage:           https://github.com/simoncourtenage/quanthas
Bug-Reports:        https://github.com/simoncourtenage/quanthas/issues
Build-Type:         Simple
Cabal-Version:      >=1.10

Library
  Build-Depends:    base >= 3 && < 5
                  , array >= 0.2
                  , time
  Exposed-modules:  QuantHas.Time.Frequency
                    QuantHas.Time.TimeUnit
                    QuantHas.Time.Period
                    QuantHas.Time.Date
                    QuantHas.Time.DayName
                    QuantHas.Time.DayCounter
                    QuantHas.Time.DateGeneration
                    QuantHas.Time.BusinessDayConvention
                    QuantHas.Time.Calendar.Calendar
                    QuantHas.Time.Calendar.NullCalendar
                    QuantHas.Time.Calendar.UnitedKingdom
                    QuantHas.Time.Calendar.CalendarImpl
                    QuantHas.Time.Calendar.WesternCalendarImpl
                    QuantHas.Time.Calendar.Functions
                    QuantHas.Time.Schedule
                    QuantHas.Time.IMM
                    QuantHas.Util
                    QuantHas.Settings
                    -- QuantHas.Require
  default-language: Haskell2010                 
  hs-source-dirs:   src
  ghc-options:      -Wno-all

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: testsuite
  main-is: Test.hs
  build-depends:    base >= 3 && < 5
                  , QuantHas
                  , tasty >= 0.7
                  , tasty-hunit
  default-language: Haskell2010
  other-modules:  Tests.CalendarTest
                  , Tests.DateTest
                  , Tests.DayCounterTest
                  , Tests.ScheduleTest 
