Name:               QuantHas
Version:            0.0
Description:
    QuantHas project is an attempt to port QuantLib to Haskell keeping the functional flavor of Haskell.
License:            BSD3
License-file:       LICENSE
Author:             Simon Courtenage
Maintainer:         courtenage@gmail.com
Homepage:           http://quanthas.sourceforge.net
Build-Type:         Simple
Cabal-Version:      >=1.8

Library
  Build-Depends:    base >= 3 && < 5, array >= 0.2
  Exposed-modules:  QuantHas.Time.Frequency
                    QuantHas.Time.TimeUnit
                    QuantHas.Time.Period
                    QuantHas.Time.Date
                    QuantHas.Time.DayCounter
                    QuantHas.Time.BusinessDayConvention
                    QuantHas.Time.Calendar
                    QuantHas.Time.Calendars.UnitedKingdom
  hs-source-dirs:   src
--  ghc-options:      -Wall

